--- a/WebClient2/index.html
+++ b/WebClient2/index.html
@@ -16,12 +16,15 @@
 		<label class="col-sm-2 control-label">url</label>
 		<div class="col-sm-10">
 			<input value="http://localhost:8080/" class="form-control" type="text" id="txtUrl"/>
+			<p class="help-block">must have trailing slash "http://localhost:8080/" and not "http://localhost:8080"</p>
 		</div>
 	</div>
 	<div class="form-group">
 		<label class="col-sm-2 control-label">service url</label>
 		<div class="col-sm-10">
 			<input value="api/default/albums" class="form-control" type="text" id="txtServiceUrl"/>
+			<p class="help-block">must not have slash before "api/default/albums" and not "/api/default/albums"</p>
+
 		</div>
 	</div>
 	<div class="form-group">
